styling for app

--- a/app/views/get_datas/index.html.erb
+++ b/app/views/get_datas/index.html.erb
@@ -1,1 +1,69 @@
-<h1>Index</h1>
+<div>
+    <div class="header-section">
+        <h1>Energy Consumptions</div>
+    </div>
+    <!-- Search bar for table -->
+    <div class="search">
+        <form>
+            <div class="form-row pt-3">
+                <div class="form-group col-md-6">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="search-handle">Search</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-handle">
+                    </div>
+                </div>
+                <div class="form-group col-md-4">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" for="sort">Sort</label>
+                        </div>
+                        <select class="custom-select" id="sort">
+                            <option selected>Choose...</option>
+                            <option value="asc">Ascending</option>
+                            <option value="desc">Descending</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <!-- Table to display list of properties, will add filters as well -->
+    <div class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                </tr>
+                <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                </tr>
+                <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="chart">
+    
+    </div>
+</div>
