--- a/app/views/get_datas/index.html.erb
+++ b/app/views/get_datas/index.html.erb
@@ -2,52 +2,55 @@
     <div class="header-section">
         <h1>Energy Consumptions</div>
     </div>
-    <!-- Search bar for table -->
-    <div class="search">
-        <form>
-            <div class="form-row pt-3">
-                <div class="form-group col-md-6">
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="search-handle">Search</span>
+    <!-- Container div -->
+    <div id="energy-properties">
+        <!-- Search bar for table -->
+        <div class="search">
+            <form>
+                <div class="form-row pt-3">
+                    <div class="form-group col-md-6">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="search-handle">Search</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-handle">
                         </div>
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-handle">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="sort">Sort</label>
+                            </div>
+                            <select class="custom-select" id="sort">
+                                <option selected>Choose...</option>
+                                <option value="asc">Ascending</option>
+                                <option value="desc">Descending</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group col-md-4">
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <label class="input-group-text" for="sort">Sort</label>
-                        </div>
-                        <select class="custom-select" id="sort">
-                            <option selected>Choose...</option>
-                            <option value="asc">Ascending</option>
-                            <option value="desc">Descending</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!-- Table to display list of properties, will add filters as well -->
-    <div class="table">
-        <table class="table">
-            <thead>
-                <tr>
-                <th scope="col">Property</th>
-                <th scope="col">Energy</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+            </form>
+        </div>
+        <!-- Table to display list of properties, will add filters as well -->
+        <div class="table">
+            <table class="table">
+                <thead>
+                    <tr>
+                    <th scope="col">Property</th>
+                    <th scope="col">Energy Avg</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="(property, index) in listProperties" :key="'property'+index">
+                        <td>{{property.address}}, {{property.city}} {{property.state}} {{property.zip}}</td>
+                        <td>{{getEnergyAvg(property.energy)}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-    <div class="chart">
-    
+        <div class="chart">
+        
+        </div>
     </div>
 </div>
