--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <h5 class="my-0 mr-md-auto font-weight-normal">EnergyCInc</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <%= link_to "Home", home_path, class: "p-2 text-dark" %>
-        <%= link_to "About", about_path, class: "p-2 text-dark" %>
+        <!--<%= link_to "About", about_path, class: "p-2 text-dark" %> -->
       </nav>
     </div>
     <div class="container">
